# Astar_kino_GUI

./: CMakeLists.txt  mainwindow.cpp  mainwindow.h
